Version ?.?.?? (released ??-??-????):

	* Starchart placed on the middle when defining a new game.

	* All specs data files are loaded.

	* Developers documentation generated using doxygen.
	
Version 0.2.11 (released 03-15-2004):

	* Bugs on some ship cargo unload and transfer methods were fixed.

	* Bugs on ship data loading and ship on starchart manipulation
	  were fixed.
	
	* Bug on the unpack detection was fixed, the path was assembled
	  incorrectly so the playerN.rst was not found.
	
	* Unpack feature enhanced to store additional targets on TARGETx.EXT
	  file.
	
	* German translation, thanks to Stefan Reuther!!!

Version 0.2.10 (released 02-02-2004):

	* Several code optimizations on GUI updates.

	* Planet and ship marks restyled.

	* Planets are shown as circles, ships as triangles oriented
  	  depending on their heading.

	* First implementation on ship data: right-click on them to check
	  for their info.

	* Implementation of GwpLocation, a new object to group other
	  objects on the starchart that are on the same place.

	* Several bug fixes on the new data objects.


Version 0.2.9 (released 01-25-2004):

	* Internal data redesign: planets, starbases and ships now are
	  GObjects, part of a object hierarchy that will represent the
	  entire data scheme on GWP. This will make very easy the binding to
	  another languajes to treat this data.

	* This version doesn't add any new feature, the amount of work
	  needed to change the internal data was enough to release a new
	  version, the new features will arrive shortly!


Version 0.2.8 (released 06-30-2003):

	* Starbase data are now being loaded.

	* Starbase image shows on planet image when applicable.

	* Initial starbase view UI.

	* Internal data reorganization to be able to save game state.

	* Turns left calculation for mineral extraction on planets.

	* Starchart coordinates are now saved from one GWP execution to
	  another.

	* Global Defense Systems calculation on each planet.
