@@ -106,6 +106,7 @@ GHashTable *base_list;
 GHashTable *ship_list;
 GHashTable *target_list;
 GHashTable *fleet_list;
+GSList *minefield_list;
 
 /* Specs */
 GSList *hullspec_list;
